--- a/project.ipynb
+++ b/project.ipynb
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
@@ -198,7 +198,7 @@
               "[100 rows x 3 columns]"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 44,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -210,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -225,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -241,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 47,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -256,7 +256,10 @@
         "        return 1.0\n",
         "    return 0.5\n",
         "\n",
-        "ratings = text.apply(assign_rating)\n"
+        "ratings = text.apply(assign_rating)\n",
+        "\n",
+        "# convert to 1–5 raw scale\n",
+        "rating_raw = (1 + 4 * ratings).round().astype(int)\n"
       ]
     },
     {
@@ -272,19 +275,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 72,
       "metadata": {},
       "outputs": [],
       "source": [
         "ratings_df = pd.DataFrame({\n",
         "    \"recipe_slug\": recipes[\"recipe_slug\"],\n",
-        "    \"rating\": ratings.round(2)\n",
+        "    \"rating\": (rating_raw - 1) * 0.25\n",
         "})"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 73,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -293,7 +296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 74,
       "metadata": {},
       "outputs": [
         {
@@ -399,7 +402,7 @@
               "[100 rows x 2 columns]"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 74,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -451,7 +454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 75,
       "metadata": {
         "id": "cGvj258d8nnv"
       },
@@ -465,7 +468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 76,
       "metadata": {},
       "outputs": [
         {
@@ -571,7 +574,7 @@
               "[752 rows x 2 columns]"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 76,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -582,7 +585,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 77,
       "metadata": {},
       "outputs": [
         {
@@ -648,7 +651,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 78,
       "metadata": {
         "id": "dxtiRunPwPYz"
       },
@@ -661,7 +664,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 79,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -671,7 +674,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 80,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -699,7 +702,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 81,
       "metadata": {
         "id": "fiMBlU4L8uSR"
       },
@@ -733,7 +736,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 82,
       "metadata": {
         "id": "pIClPwYVso5a"
       },
@@ -747,7 +750,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 83,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -757,7 +760,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 84,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -769,7 +772,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 85,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -778,7 +781,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 86,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -813,7 +816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 91,
       "metadata": {
         "id": "kY7aWD_PuP0W"
       },
@@ -821,8 +824,8 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "ridge_reg = 2\n",
-        "ucb_alpha = 1\n",
+        "ridge_reg = 1\n",
+        "ucb_alpha = 2\n",
         "\n",
         "features = pd.read_csv(\"features.tsv\", sep=\"\\t\")\n",
         "ratings  = pd.read_csv(\"ratings.tsv\",  sep=\"\\t\")"
@@ -830,7 +833,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 92,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -844,7 +847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 93,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -860,7 +863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 94,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -893,7 +896,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 67,
       "metadata": {
         "id": "hQ7r45B7wm4v"
       },
@@ -907,7 +910,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 68,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -919,7 +922,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 69,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -937,7 +940,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 70,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -975,7 +978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {},
       "outputs": [],
       "source": [
